# stix

./: Makefile.am  Makefile.in  README.md  configure  configure.ac  mkdir2.p00  spr2_aus.pas  stix.def  stix.eds  stix.pas  stsfx.pas  suchedat.pas  test.pas  test_aus.pas  test_auu.pas
EXP_32/: EXP32.ASM
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: mkdir2.pas  spr2_ein.pas  stix$$$.001  stix$$$.002  stix_def.pas  stix_spr.pas  test_ein.pas
